tests/snapshots/executetests__executetests__test_query_execute__case_0.snap
---
source: tests/executetests.rs
expression: "case(input, output)"
---
p(Z, h(Z,W), f(W))
-----
000	<REF,0>
001	<STR,2>
002	h/2
003	<REF,0>
004	<REF,4>
005	<STR,6>
006	f/1
007	<REF,4>

