tests/snapshots/executetests__executetests__test_query_execute__case_1.snap
---
source: tests/executetests.rs
expression: "case(input, output)"
---
?- f(X, g(X,a)).
-----
000	<STR,1>
001	a/0
002	<REF,2>
003	<STR,4>
004	g/2
005	<REF,2>
006	<STR,1>

