tests/snapshots/executetests__executetests__test_query_execute__case_2.snap
---
source: tests/executetests.rs
expression: "case(input, output)"
---
?- f(b, Y).
-----
000	<STR,1>
001	b/0
002	<REF,2>

