tests/snapshots/executetests__executetests__test_query_execute__case_4.snap
---
source: tests/executetests.rs
expression: "case(input, output)"
---
a
-----
000	<STR,1>
001	a/0

